Added MC button and updates

--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
       <div class="container">
         <h1 class="display-3" style="color: orange;">South First Media</h1>
         <h4 style="color: white;"><br>Simple, elegant, accessible blogs<br><br>You send us your content, we do the rest<br><br>Straightforward pricing, $20/month (no contracts)<br><br>24/7 Support<br><br></h4>
-        <p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p>
+        <!-- Begin MailChimp Signup Form -->
+<!-- Begin MailChimp Signup Form -->
+<style type="text/css">
+  #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;}
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<div id="mc_embed_signup">
+<form action="https://sfirstm.us18.list-manage.com/subscribe/post?u=2265c304e5354ad9d01eb34d5&amp;id=f6d8393ee3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
+    <div class="clear"><input style="box-shadow: 2px 2px 5px #000;" class="btn btn-danger" type="submit" value="Let's get started" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+
+<!--End mc_embed_signup-->
+</div>
+        <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
       </div>
     </div>
 
@@ -40,10 +59,12 @@
         </div>
       </div>
       <hr>
-      <footer align="center">
+      <footer>
         <p>Follow us on 
           <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></p>
+          <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+        </p>
       </footer>
     </div> <!-- /container -->
 
