--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html> 
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>South First Media - Simple, elegant, accessible blogs and content management.</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="css/style.css">
+    <!-- ##Favicon <link rel="icon" type="image/png" href="http://example.com/image.png"> -->
   </head>
 
 <body>
