--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div> -->
         <div class="col-md-12">
           <h2>1) We create your blog</h2>
-            <p>You're in need of a blog to hold content that either doesn't fit on your site or for a passion project you'd like to get the word out about. That's where we can help. We will guide you through the process of selecting a theme for your blog and within minutes, we'll have your blog ready for your first posts.</p>
+            <p>You're in need of a blog to hold content that either doesn't fit on your site or for a passion project you'd like to get the word out about, we can help. We will work with you to select the best theme for your project's content.</p>
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
         <div class="col-md-12">
