--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>South First Media - Simple, elegant, accessible blogs and content management.</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+    <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <!-- ##Favicon <link rel="icon" type="image/png" href="http://example.com/image.png"> -->
   </head>
@@ -14,8 +15,8 @@
     <!-- Used Bootstrap jumbotron template -->
     <div class="jumbotron" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
       <div class="container">
-        <h1 class="display-3" style="color: orange;">South First Media</h1>
-        <h4 style="color: white;"><br>Simple, elegant, accessible blogs<br><br>You send us your content, we do the rest<br><br>Straightforward pricing, $20/month (no contracts)<br><br>24/7 Support<br><br></h4>
+        <h1 id="header" style="color: orange;">South First Media</h1>
+        <h4 style="color: white;"><br>Phenomenology +<br><br>Design +<br><br>Culture<br><br></h4>
         <!-- Begin MailChimp Signup Form -->
 <!-- Begin MailChimp Signup Form -->
 <style type="text/css">
@@ -47,18 +48,18 @@
             <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> 
         </div> -->
         <div class="col-md-12">
-          <h2>1) We create your blog</h2>
-            <p>You're in need of a blog to hold content that either doesn't fit on your site or for a passion project you'd like to get the word out about, we can help. We will work with you to select the best theme for your project's content.</p>
+          <h2>Our approach</h2>
+            <p>We're an agency that works at the intersection of phenomenology, design and culture. We believe in the slow manifestation of deep ideas through an iterative process of discovery. We steward projects with great care not only for the final quality of the final product, but for the depth of the personal relationships cultivated throughout.</p>
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
-        <div class="col-md-12">
+        <!-- <div class="col-md-12">
           <h2>2) You send us your content via email</h2>
               <p>After we're up and running, just go ahead and send us any text, photos, or videos and we'll update your blog. Our aim is to make the process of creating and udpating the content on your blog as easy as possible.</p>
         </div>
         <div class="col-md-12">
           <h2>3) We maintain your blog</h2>
               <p>Your blog's code repository will be version controlled, easily accessible and secure. We can transfer ownership of all files to you or your developers.</p>
-        </div>
+        </div> -->
       </div>
       <hr>
       <footer>
