--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-        <!-- ##Favicon <link rel="icon" type="image/png" href="http://example.com/image.png"> -->
+    <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
@@ -21,12 +21,12 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+    <!-- End Favicon -->
     <title>South First Media - Simple, elegant, accessible blogs and content management.</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <!-- ##Favicon <link rel="icon" type="image/png" href="http://example.com/image.png"> -->
   </head>
 
 <body>
@@ -67,7 +67,9 @@
         </div> -->
         <div class="col-md-12">
           <h2>Our approach</h2>
-            <p>We're an agency that works at the intersection of phenomenology, design and culture. We believe in the slow manifestation of deep ideas through an iterative process of discovery. We steward projects with great care not only for the final quality of the final product, but for the depth of the personal relationships cultivated throughout.</p>
+            <p>We're an agency that works at the intersection of phenomenology, design and culture.</p>
+            <p>We believe in the slow manifestation of deep ideas through an iterative process of learning and discovery.</p>
+            <p>We steward projects with care not only for the quality of the final product,<br>but for the depth of the personal relationships cultivated throughout.</p>
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
         <!-- <div class="col-md-12">
