--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <!-- End Favicon -->
-    <title>South First Media - Simple, elegant, accessible blogs and content management.</title>
+    <title>South First Media - Design & Development Agency</title>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
     <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
     <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
@@ -39,7 +39,7 @@
     <div class="jumbotron" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
       <div class="container">
         <h1 id="header" style="color: orange;">South First Media</h1>
-        <h4 style="color: white;"><br>Phenomenology +<br><br>Design +<br><br>Culture<br><br></h4>
+        <h4 style="color: white;"><br>Phenomenology +<br><br>Design +<br><br>Development<br><br></h4>
         <!-- Begin MailChimp Signup Form -->
 <!-- Begin MailChimp Signup Form -->
 <div id="mc_embed_signup">
@@ -66,7 +66,7 @@
         </div> -->
         <div class="col-md-12">
           <h2>Our approach</h2>
-            <p>We're an agency that works at the intersection of phenomenology, design and culture.</p>
+            <p>We're an agency that works at the intersection of phenomenology, design and development.</p>
             <p>We believe in the slow manifestation of deep ideas through an iterative process of learning and discovery.</p>
             <p>We steward projects with care not only for the quality of the final product,<br>but for the depth of the personal relationships cultivated throughout.</p>
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
