--- a/index.html
+++ b/index.html
@@ -59,11 +59,6 @@
 
     <div class="container">
       <div class="row">
-        <!-- <div class="col-md-12">
-          <h2>How does it work?</h2>
-            <p>Our goal is to make the process of creating and publishing content to your blog as simple as possible.</p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> 
-        </div> -->
         <div class="col-md-12">
           <h2>Our approach</h2>
             <p>We're an agency that works at the intersection of phenomenology, design and development.</p>
@@ -71,21 +66,14 @@
             <p>We steward projects with care not only for the quality of the final product,<br>but for the depth of the personal relationships cultivated throughout.</p>
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
-        <!-- <div class="col-md-12">
-          <h2>2) You send us your content via email</h2>
-              <p>After we're up and running, just go ahead and send us any text, photos, or videos and we'll update your blog. Our aim is to make the process of creating and udpating the content on your blog as easy as possible.</p>
-        </div>
-        <div class="col-md-12">
-          <h2>3) We maintain your blog</h2>
-              <p>Your blog's code repository will be version controlled, easily accessible and secure. We can transfer ownership of all files to you or your developers.</p>
-        </div> -->
+    
       </div>
       <hr>
       <footer>
         <p>Follow us on 
           <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-          <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
+          <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
         </p>
      </footer>
     </div> <!-- /container -->
