--- a/index.html
+++ b/index.html
@@ -39,18 +39,18 @@
     <div class="jumbotron" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
       <div class="container">
         <h1 id="header" style="color: orange;">South First Media</h1>
-        <h4 style="color: white;"><br>Phenomenology +<br><br>Design +<br><br>Development<br><br></h4>
+        <h4 style="color: white;">Shop Coming Soon</h4>
         <!-- Begin MailChimp Signup Form -->
 <!-- Begin MailChimp Signup Form -->
-<div id="mc_embed_signup">
+<!-- <div id="mc_embed_signup">
 <form action="https://sfirstm.us18.list-manage.com/subscribe/post?u=2265c304e5354ad9d01eb34d5&amp;id=f6d8393ee3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
+    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
     <div class="clear"><input style="box-shadow: 2px 2px 5px #000;" class="btn btn-danger" type="submit" value="Let's get started" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
-</form>
-</div>
+</form> -->
+</div> -->
 <!--End mc_embed_signup-->
 </div>
         <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
@@ -60,17 +60,17 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <h2>Our approach</h2>
-            <p>We're an agency that works at the intersection of phenomenology, design and development.</p>
-            <p>We believe in the slow manifestation of deep ideas through an iterative process of learning and discovery.</p>
-            <p>We steward projects with care not only for the quality of the final product,<br>but for the depth of the personal relationships cultivated throughout.</p>
+          <h2>Welcome</h2>
+            <p>This is the future shop for South First Media.</p>
+            <p>The plan is to have paintings, and perhaps other goodies, for sale.</p>
+
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
       
       </div>
       <hr>
       <footer>
-        <p>Follow us on 
+        <p>You can also follow us on:
           <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
          <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
           <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
