Back to agency language

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="jumbotron" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
       <div class="container">
         <h1 id="header" style="color: orange;">South First Media</h1>
-        <h4 style="color: white;">Shop Coming Soon</h4>
+        <h4 style="color: white;"></h4>
         <!-- Begin MailChimp Signup Form -->
 <!-- Begin MailChimp Signup Form -->
 <!-- <div id="mc_embed_signup">
@@ -61,8 +61,8 @@
       <div class="row">
         <div class="col-md-12">
           <h2>Welcome</h2>
-            <p>This is the future shop for South First Media.</p>
-            <p>The plan is to have paintings, and perhaps other goodies, for sale.</p>
+          <p>We're a team of developers and marketers.</p>
+          <p>Our goal is to work with our clients to help deliver exceptional, multi-platform experiences for their audience.</p>
 
             <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
        </div>
@@ -72,8 +72,8 @@
       <footer>
         <p>You can also follow us on:
           <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-         <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
+         <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
         </p>
       </footer> 
     </div> <!-- /container -->
