Changed Welcome copy

--- a/index.html
+++ b/index.html
@@ -1,82 +1,91 @@
 <!DOCTYPE html>
-<html> 
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-    <!-- End Favicon -->
-    <title>South First Media - Design & Development Agency</title>
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
-    <link rel='stylesheet prefetch' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
-    <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <style type="text/css">
-      #mc_embed_signup{clear:left; font:14px Helvetica,Arial,sans-serif;}
-      /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+<html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
+  <!-- Favicon -->
+  <link rel="apple-touch-icon" sizes="57x57" href="apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+  <link rel="manifest" href="manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <!-- End Favicon -->
+  <title>South First Media - Design & Development Agency</title>
+  <link rel='stylesheet prefetch'
+    href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-alpha.6/css/bootstrap.min.css'>
+  <link rel='stylesheet prefetch'
+    href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
+  <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
+  <style type="text/css">
+    #mc_embed_signup {
+      clear: left;
+      font: 14px Helvetica, Arial, sans-serif;
+    }
+
+    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
          We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-    </style>
-  </head>
+  </style>
+</head>
 
 <body>
-    <!-- Used Bootstrap jumbotron template -->
-    <div class="jumbotron" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
-      <div class="container">
-        <h1 id="header" style="color: orange;">South First Media</h1>
-        <h4 style="color: white;"></h4>
-        <!-- Begin MailChimp Signup Form -->
-<!-- Begin MailChimp Signup Form -->
-<!-- <div id="mc_embed_signup">
+  <!-- Used Bootstrap jumbotron template -->
+  <div class="jumbotron"
+    style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
+    <div class="container">
+      <h1 id="header" style="color: orange;">South First Media</h1>
+      <h4 style="color: white;"></h4>
+      <!-- Begin MailChimp Signup Form -->
+      <!-- Begin MailChimp Signup Form -->
+      <!-- <div id="mc_embed_signup">
 <form action="https://sfirstm.us18.list-manage.com/subscribe/post?u=2265c304e5354ad9d01eb34d5&amp;id=f6d8393ee3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
     <div id="mc_embed_signup_scroll">
     <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
+      <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
     <div class="clear"><input style="box-shadow: 2px 2px 5px #000;" class="btn btn-danger" type="submit" value="Let's get started" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
     </div>
 </form> -->
-</div> -->
-<!--End mc_embed_signup-->
-</div>
-        <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
+    </div> -->
+    <!--End mc_embed_signup-->
+  </div>
+  <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
+  </div>
+  </div>
+
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Welcome</h2>
+        <p>Our mission is to craft exceptional, multi-platform experiences for our clients and their audience.</p>
+
+        <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
       </div>
+
     </div>
-
-    <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h2>Welcome</h2>
-          <p>We're a team of developers and marketers.</p>
-          <p>Our goal is to work with our clients to help deliver exceptional, multi-platform experiences for their audience.</p>
-
-            <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
-       </div>
-      
-      </div>
-      <hr>
-      <footer>
-        <p>You can also follow us on:
-          <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a>
-         <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
-          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a>
-        </p>
-      </footer> 
-    </div> <!-- /container -->
+    <hr>
+    <footer>
+      <p>You can also follow us on:
+        <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x"
+            aria-hidden="true"></i></a>
+        <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+          <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
+      </p>
+    </footer>
+  </div> <!-- /container -->
 
 </body>
+
 </html>
