--- a/index.html
+++ b/index.html
@@ -69,16 +69,15 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Welcome</h2>
-        <p>Our mission is to craft exceptional, multi-platform experiences for our clients and their audience.</p>
-
-        <!-- <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p> -->
+        <p>Our mission is to craft exceptional, multi-platform experiences for our selves, our clients and their audience.</p>
+        <h5>Projects</h5>
+        <p><a class="btn btn-secondary" href="https://nasa-photo-of-the-day.roskideluge.now.sh/" target="_blank" role="button">NASA Photo of The Day</a></p>
       </div>
 
     </div>
     <hr>
     <footer>
-      <p>You can also follow us on:
-        <a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x"
+      <p><a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x"
             aria-hidden="true"></i></a>
         <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
           <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
