--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="row">
       <div class="col-md-12">
         <h2>Welcome</h2>
-        <p>Our mission is to craft exceptional, multi-platform experiences for our selves, our clients and their audience.</p>
+        <p>Our mission is to craft exceptional, multi-platform experiences for our selves and our clients.</p>
         <h5>Projects</h5>
         <p><a class="btn btn-secondary" href="https://nasa-photo-of-the-day.roskideluge.now.sh/" target="_blank" role="button">NASA Photo of The Day</a></p>
       </div>
