--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <p>Our mission is to craft exceptional, multi-platform experiences for our selves and our clients.</p>
         <h5>Projects</h5>
         <p><a class="btn btn-secondary" href="https://nasa-photo-of-the-day.roskideluge.now.sh/" target="_blank" role="button">NASA Photo of The Day</a></p>
+        <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Messenger Bot - Sample Flow</a></p>
       </div>
 
     </div>
