--- a/index.html
+++ b/index.html
@@ -47,19 +47,6 @@
     style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
     <div class="container">
       <h1 id="header" style="color: orange;">South First Media</h1>
-      <h4 style="color: white;"></h4>
-      <!-- Begin MailChimp Signup Form -->
-      <!-- Begin MailChimp Signup Form -->
-      <!-- <div id="mc_embed_signup">
-<form action="https://sfirstm.us18.list-manage.com/subscribe/post?u=2265c304e5354ad9d01eb34d5&amp;id=f6d8393ee3" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-      <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_2265c304e5354ad9d01eb34d5_f6d8393ee3" tabindex="-1" value=""></div>
-    <div class="clear"><input style="box-shadow: 2px 2px 5px #000;" class="btn btn-danger" type="submit" value="Let's get started" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form> -->
-    </div> -->
-    <!--End mc_embed_signup-->
   </div>
   <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
   </div>
@@ -72,7 +59,7 @@
         <p>Our mission is to craft exceptional, multi-platform experiences for our selves and our clients.</p>
         <h5>Projects</h5>
         <p><a class="btn btn-secondary" href="https://nasa-photo-of-the-day.roskideluge.now.sh/" target="_blank" role="button">NASA Photo of The Day</a></p>
-        <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Messenger Bot - Sample Flow</a></p>
+        <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Bot - Chat on Messenger</a></p>
       </div>
 
     </div>
