--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
       <div class="col-md-12">
         <h2>Welcome</h2>
         <p>Our mission is to craft exceptional, multi-platform experiences for our selves and our clients.</p>
+        <h5>What we do</h5>
+        <p><a class="btn btn-secondary" href="#" target="_blank">Chatbot Building & Maintenance</a></p>
+        <p><a class="btn btn-secondary" href="#" target="_blank">Web Design & Development</a></p>
+        <p><a class="btn btn-secondary" href="#" target="_blank">Digital Production</a></p>
         <h5>Projects</h5>
         <p><a class="btn btn-secondary" href="https://nasa-photo-of-the-day.roskideluge.now.sh/" target="_blank" role="button">NASA Photo of The Day</a></p>
         <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Bot - Chat on Messenger</a></p>
