--- a/index.html
+++ b/index.html
@@ -30,23 +30,13 @@
     href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'>
   <link href="https://fonts.googleapis.com/css?family=Shrikhand" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <style type="text/css">
-    #mc_embed_signup {
-      clear: left;
-      font: 14px Helvetica, Arial, sans-serif;
-    }
-
-    /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
-         We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-  </style>
 </head>
 
 <body>
   <!-- Used Bootstrap jumbotron template -->
-  <div class="jumbotron"
-    style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
+  <div class="mandala" style="background-image: url('https://cdn-images-1.medium.com/max/800/1*W3RYDCrTx8gq-1-JsZkPKQ.png'); background-size: cover;">
     <div class="container">
-      <h1 id="header" style="color: orange;">South First Media</h1>
+      <h1 id="header">South First Media</h1>
   </div>
   <!--<p><a class="btn btn-primary btn-lg" style="box-shadow: 2px 2px 5px #000;" href="http://www.bbc.co.uk/programmes/p029nb9g" target="_blank" role="button">Get in touch &raquo;</a></p> -->
   </div>
