--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p><a class="btn btn-secondary" href="#" target="_blank">Digital Production</a></p>
         <h5>Projects</h5>
         <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Bot - Chat on Messenger</a></p>
-        <p><a class="btn btn-secondary" href="https://sfmbots-czciqh87e.vercel.app/" target="_blank" role="button">GoodBots - work in progress</a></p>
+        <p><a class="btn btn-secondary" href="https://sfmbots.vercel.app/" target="_blank" role="button">GoodBots - work in progress</a></p>
       </div>
 
     </div>
