Added BAH demo button

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
         <p><a class="btn btn-secondary" href="#" target="_blank">Web Design & Development</a></p>
         <p><a class="btn btn-secondary" href="#" target="_blank">Digital Production</a></p>
         <h5>Projects</h5>
+        <p><a class="btn btn-primary" href="https://m.me/sfirstm?ref=book_call" target="_blank" role="button">Bradford Animal Hospital - Demo</a></p>
         <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Bot - Chat on Messenger</a></p>
         <p><a class="btn btn-secondary" href="https://sfmbots.vercel.app/" target="_blank" role="button">GoodBots - work in progress</a></p>
       </div>
