--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Our mission is to craft exceptional, multi-platform experiences for our selves and our clients.</p>
         <h5>What we do</h5>
         <p><a class="btn btn-secondary" href="#" target="_blank">Chatbot Builders</a></p>
-        <p><a class="btn btn-secondary" href="#" target="_blank"> Multi Platform Digital Production</a></p>
+        <p><a class="btn btn-secondary" href="#" target="_blank"> Cross Platform Digital Production</a></p>
         <h5>Projects</h5>
         <p><a class="btn btn-primary" href="https://m.me/sfirstm?ref=book_call" target="_blank" role="button">Bradford Animal Hospital - Demo</a></p>
         <p><a class="btn btn-secondary" href="https://m.me/sfirstm?ref=sfm_sample" target="_blank" role="button">SFM Bot - Chat on Messenger</a></p>
