Styling and added BBC link

--- a/index.html
+++ b/index.html
@@ -59,11 +59,10 @@
     </div>
     <hr>
     <footer>
-      <p><a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x"
-            aria-hidden="true"></i></a>
+      <p><a href="https://www.instagram.com/southfirstmedia/" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></p>
+            <p><a id="pfish" href="https://www.youtube.com/watch?v=VQr8xDk_UaY" target="_blank">Pufferfish Constructs a Masterpiece of Love - BBC Earth</a></p>
         <!-- <a href="https://twitter.com/sfirstm" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
           <a href="https://github.com/sfirstm" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a> -->
-      </p>
     </footer>
   </div> <!-- /container -->
 
