--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <p><a class="btn btn-secondary" href="#" target="_blank">Chatbot Creation</a></p>
         <p><a class="btn btn-secondary" href="#" target="_blank"> Cross Platform Digital Production</a></p>
         <h5>Projects</h5>
-        <p><a class="btn btn-primary" href="https://m.me/sfirstm?ref=book_call" target="_blank" role="button">Appointment Booking Bot - Messenger</a></p>
+        <p><a class="btn btn-primary" href="https://sfmbots.vercel.app/" target="_blank" role="button">Appointment Booking Bot - Messenger</a></p>
         <p><a class="btn btn-primary" href="https://m.me/sfirstm" target="_blank" role="button">Lead Generation Bot - Messenger</a></p>
         <p><a class="btn btn-secondary" href="https://sfmbots.vercel.app/" target="_blank" role="button">GoodBots.io - work in progress</a></p>
       </div>
